--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -13,7 +13,7 @@ defaults:
 
 jobs:
   Test:
-    runs-on: windows-latest
+    runs-on: [ windows-latest ]
 
     steps:
       - uses: actions/checkout@v2
