--- a/Templates/AppSource App/.github/workflows/AddExistingAppOrTestApp.yaml
+++ b/Templates/AppSource App/.github/workflows/AddExistingAppOrTestApp.yaml
@@ -20,7 +20,7 @@ defaults:
 
 jobs:
   initialization :
-    runs-on: windows-latest
+    runs-on: [ windows-latest ]
     outputs:
       telemetryScope: ${{ steps.init.outputs.telemetryScope }}
     steps:
@@ -29,7 +29,7 @@ jobs:
         with: 
           eventId : "DO0090"
   update:
-    runs-on: windows-latest
+    runs-on: [ windows-latest ]
     needs : [ initialization ]
 
     steps:
@@ -41,7 +41,7 @@ jobs:
           directCommit: ${{ github.event.inputs.directCommit }}
 
   postProcess :
-    runs-on: windows-latest
+    runs-on: [ windows-latest ]
     needs : [ initialization , update ]
     steps:
       - name: Finalizing the workflow
