--- a/Templates/Per Tenant Extension/.github/workflows/AddExistingAppOrTestApp.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/AddExistingAppOrTestApp.yaml
@@ -20,7 +20,7 @@ defaults:
 
 jobs:
   initialization :
-    runs-on: windows-latest
+    runs-on: [ windows-latest ]
     outputs:
       telemetryScope: ${{ steps.init.outputs.telemetryScope }}
     steps:
@@ -30,7 +30,7 @@ jobs:
           eventId : "DO0090"
 
   update:
-    runs-on: windows-latest
+    runs-on: [ windows-latest ]
     needs : [ initialization ]
     steps:
       - name: Add existing app
@@ -42,7 +42,7 @@ jobs:
           directCommit: ${{ github.event.inputs.directCommit }}
 
   postProcess :
-    runs-on: windows-latest
+    runs-on: [ windows-latest ]
     needs : [ initialization , update ]
     steps:
       - name: Finalizing the workflow
