renaming connection strings

--- a/Templates/Per Tenant Extension/.github/workflows/PublishToEnvironment.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/PublishToEnvironment.yaml
@@ -27,7 +27,7 @@ jobs:
         with: 
           eventId : "DO0097"
 
-  Environments:
+  Analyze:
     runs-on: [ windows-latest ]
     needs : [ initialization ]
     outputs:
