--- a/Actions/CreateReleaseNotes/action.yaml
+++ b/Actions/CreateReleaseNotes/action.yaml
@@ -14,8 +14,7 @@ inputs:
     default: ${{ github.token }}
   parentTelemetryScope:
     description: Specifies the parent telemetry scope for the Telemetry signal
-    required: false
-    default: '' 
+    required: true
   workflowToken:
     description: A GitHub token with permissions to modify workflows
     required: false
@@ -30,7 +29,7 @@ outputs:
 runs:
   using: composite
   steps:
-    - run: ${{ github.action_path }}/CreateReleaseNotes.ps1 -actor '${{ inputs.actor }}' -token '${{ inputs.token }}' -workflowToken '${{ inputs.workflowToken }}' -tag_name '${{ inputs.tag_name }}' -parentTelemetryScope '${{ inputs.parentTelemetryScope}}' -telemetryEventId 'DO0074'
+    - run: ${{ github.action_path }}/CreateReleaseNotes.ps1 -actor '${{ inputs.actor }}' -token '${{ inputs.token }}' -parentTelemetryScope '${{ inputs.parentTelemetryScope }}' -workflowToken '${{ inputs.workflowToken }}' -tag_name '${{ inputs.tag_name }}'
       id: createreleasenotes
       shell: PowerShell
 branding:
