--- a/Actions/Deploy/action.yaml
+++ b/Actions/Deploy/action.yaml
@@ -9,9 +9,10 @@ inputs:
     description: The GitHub token running the action
     required: false
     default: ${{ github.token }}
-  parentTelemetryScope:
+  parentTelemetryScopeJson:
     description: Specifies the parent telemetry scope for the Telemetry signal
-    required: true
+    required: false
+    default: '{}'
   projects:
     description: Projects to deploy (default is all)
     required: false
@@ -29,7 +30,7 @@ inputs:
 runs:
   using: composite
   steps:
-    - run: ${{ github.action_path }}/Deploy.ps1 -actor '${{ inputs.actor }}' -token '${{ inputs.token }}' -parentTelemetryScope '${{ inputs.parentTelemetryScope }}' -projects '${{ inputs.projects }}' -environmentName '${{ inputs.environmentName }}' -artifacts '${{ inputs.artifacts }}' -type '${{ inputs.type }}'
+    - run: ${{ github.action_path }}/Deploy.ps1 -actor '${{ inputs.actor }}' -token '${{ inputs.token }}' -parentTelemetryScopeJson '${{ inputs.parentTelemetryScopeJson }}' -projects '${{ inputs.projects }}' -environmentName '${{ inputs.environmentName }}' -artifacts '${{ inputs.artifacts }}' -type '${{ inputs.type }}'
       shell: PowerShell
 branding:
   icon: terminal
