--- a/Actions/PipelineCleanup/action.yaml
+++ b/Actions/PipelineCleanup/action.yaml
@@ -5,13 +5,14 @@ inputs:
     description: Project folder
     required: false
     default: '.'
-  parentTelemetryScope:
+  parentTelemetryScopeJson:
     description: Specifies the parent telemetry scope for the Telemetry signal
-    required: true
+    required: false
+    default: '{}'
 runs:
   using: composite
   steps:
-    - run: ${{ github.action_path }}/PipelineCleanup.ps1 -project '${{ inputs.project }}' -parentTelemetryScope '${{ inputs.parentTelemetryScope }}'
+    - run: ${{ github.action_path }}/PipelineCleanup.ps1 -project '${{ inputs.project }}' -parentTelemetryScopeJson '${{ inputs.parentTelemetryScopeJson }}'
       shell: PowerShell
 branding:
   icon: terminal
