--- a/Templates/AppSource App/.github/workflows/CreateRelease.yaml
+++ b/Templates/AppSource App/.github/workflows/CreateRelease.yaml
@@ -37,7 +37,7 @@ jobs:
       telemetryScope: ${{ steps.init.outputs.telemetryScope }}
     steps:
       - id: init
-        uses: microsoft/AL-Go-Actions/InitWorkflow@main
+        uses: microsoft/AL-Go-Actions/WorkflowInitialize@main
         with: 
           eventId : "DO0094"
 
@@ -59,7 +59,7 @@ jobs:
       - name: Check for updates to AL-Go system files
         uses: microsoft/AL-Go-Actions/CheckForUpdates@main
         with:
-          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
+          parentTelemetryScopeJson: ${{ needs.initialization.outputs.telemetryScope }}
           templateUrl: ${{ env.TemplateUrl }}
 
       - name: Analyze Artifacts
@@ -94,7 +94,7 @@ jobs:
         id: createreleasenotes
         uses: microsoft/AL-Go-Actions/CreateReleaseNotes@main
         with:
-          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
+          parentTelemetryScopeJson: ${{ needs.initialization.outputs.telemetryScope }}
           tag_name: '${{github.event.inputs.tag}}'
 
       - name: Create release
@@ -130,7 +130,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
-          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
+          parentTelemetryScopeJson: ${{ needs.initialization.outputs.telemetryScope }}
           upload_url: ${{ needs.createrelease.outputs.upload_url }}
           asset_path: '${{ matrix.name }}.zip'
           asset_name: '${{ matrix.name }}.zip'
@@ -142,7 +142,7 @@ jobs:
     steps:
       - name: Finalizing the workflow
         id : postProcess
-        uses: microsoft/AL-Go-Actions/workflowpostprocess@main
+        uses: microsoft/AL-Go-Actions/WorkflowPostProcess@main
         with: 
           eventId : "DO0094"
           telemetryScope : ${{ needs.initialization.outputs.telemetryScope }}  
