--- a/Templates/Per Tenant Extension/.github/workflows/CreateOnlineDevelopmentEnvironment.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CreateOnlineDevelopmentEnvironment.yaml
@@ -26,7 +26,7 @@ jobs:
       telemetryScope: ${{ steps.init.outputs.telemetryScope }}
     steps:
       - id: init
-        uses: microsoft/AL-Go-Actions/InitWorkflow@main
+        uses: microsoft/AL-Go-Actions/WorkflowInitialize@main
         with: 
           eventId : "DO0093"
 
@@ -41,14 +41,14 @@ jobs:
       - name: Read settings
         uses: microsoft/AL-Go-Actions/ReadSettings@main
         with:
-          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
+          parentTelemetryScopeJson: ${{ needs.initialization.outputs.telemetryScope }}
 
       - name: Read secrets
         uses: microsoft/AL-Go-Actions/ReadSecrets@main
         env:
           secrets: ${{ toJson(secrets) }}
         with:
-          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
+          parentTelemetryScopeJson: ${{ needs.initialization.outputs.telemetryScope }}
           settingsJson: ${{ env.Settings }}
           secrets: 'adminCenterApiCredentials'
 
@@ -74,7 +74,7 @@ jobs:
       - name: Create Development Environment
         uses: microsoft/AL-Go-Actions/CreateDevelopmentEnvironment@main
         with:
-          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
+          parentTelemetryScopeJson: ${{ needs.initialization.outputs.telemetryScope }}
           environmentName: ${{ github.event.inputs.environmentName }} 
           reUseExistingEnvironment: ${{ github.event.inputs.reUseExistingEnvironment }} 
           adminCenterApiCredentials: ${{ env.adminCenterApiCredentials }} 
@@ -85,7 +85,7 @@ jobs:
     steps:
       - name: Finalizing the workflow
         id : postProcess
-        uses: microsoft/AL-Go-Actions/workflowpostprocess@main
+        uses: microsoft/AL-Go-Actions/WorkflowPostProcess@main
         with: 
           eventId : "DO0093"
           telemetryScope : ${{ needs.initialization.outputs.telemetryScope }}   
