--- a/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -23,7 +23,7 @@ jobs:
       telemetryScope: ${{ steps.init.outputs.telemetryScope }}
     steps:
       - id: init
-        uses: microsoft/AL-Go-Actions/InitWorkflow@main
+        uses: microsoft/AL-Go-Actions/WorkflowInitialize@main
         with: 
           eventId : "DO0098"
 
@@ -38,7 +38,7 @@ jobs:
       - name: Read settings
         uses: microsoft/AL-Go-Actions/ReadSettings@main
         with:
-          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
+          parentTelemetryScopeJson: ${{ needs.initialization.outputs.telemetryScope }}
           get: KeyVaultName,GhTokenWorkflowSecretName,TemplateUrl
 
       - name: Read secrets
@@ -46,7 +46,7 @@ jobs:
         env:
           secrets: ${{ toJson(secrets) }}
         with:
-          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
+          parentTelemetryScopeJson: ${{ needs.initialization.outputs.telemetryScope }}
           settingsJson: ${{ env.Settings }}
           secrets: 'ghTokenWorkflow=${{ env.GHTOKENWORKFLOWSECRETNAME }}'
 
@@ -61,7 +61,7 @@ jobs:
       - name: Update AL-Go system files
         uses: microsoft/AL-Go-Actions/CheckForUpdates@main
         with:
-          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
+          parentTelemetryScopeJson: ${{ needs.initialization.outputs.telemetryScope }}
           token: ${{ env.ghTokenWorkflow }}
           update: Y
           templateUrl: ${{ env.TemplateUrl }}
@@ -73,7 +73,7 @@ jobs:
     steps:
       - name: Finalizing the workflow
         id : postProcess
-        uses: microsoft/AL-Go-Actions/workflowpostprocess@main
+        uses: microsoft/AL-Go-Actions/WorkflowPostProcess@main
         with: 
           eventId : "DO0098"
           telemetryScope : ${{ needs.initialization.outputs.telemetryScope }}  
