--- a/Actions/WorkflowPostProcess/action.yaml
+++ b/Actions/WorkflowPostProcess/action.yaml
@@ -2,11 +2,11 @@ name: PowerShell script
 author: Pooya Kharamesh
 inputs:
   eventId:
-      description: The event id of the workflow
-      required: true
+    description: The event Id of the initiating workflow
+    required: true
   telemetryScope:
-      description: Telemetry scope generated during the workflow initialization
-      required: false
+    description: Telemetry scope generated during the workflow initialization
+    required: true
 runs:
   using: composite
   steps:
