remove secrets from repo list

--- a/Actions/IncrementVersionNumber/action.yaml
+++ b/Actions/IncrementVersionNumber/action.yaml
@@ -17,7 +17,7 @@ inputs:
     required: false
     default: '{}'
   project:
-    description: Projects name if the repository is setup for multiple projects (* for all projects)
+    description: Project name if the repository is setup for multiple projects (* for all projects)
     required: false
     default: '.'
   versionnumber:
